# trading-enhance-software

./: .CHANGELOG.md  .gitignore  .pre-commit-config.yaml  Emitter.py  LICENSE  README.md  UpdateMarketThread.py  dataset.ipynb  explanations.pptx  main.py  main.spec  pull_request_template.md  pyproject.toml  pyvenv.cfg  readJsonFile.py  requirements.txt  saveJsonFile.py
.github/: pull_request_template.md
.github/workflows/: pr_check_single_commit.yaml  pr_gitleaks.yaml
RLTraining/: config.py  multipleAssetManagement.py  oneAssetTrading.py  run.py
RLTraining/models/: transformer.py
UI/: CodeEditor.py  GraphWidget.py  SideBarBT.py  UIBTStrategyMenu.py  UIBackTestWindow.py  UIMainMenu.py  UIRLMenu.py  UISelectBackTestWindow.py  UISelectionMenu.py  UITabYearWidget.py
UI/highlighter/: pyHighlight.py
css/: style.qss
dataMining/: dataMining.py  fromExcToRawDataStructure.py
gym/envs/: __init__.py
gymnasium/envs/: __init__.py
simulation/: BackTest.py  analyzeBacktestDatas.py  computeBackTestTf.py  computeOneTrade.py  computeWinLossRatio.py  computeYearResults.py
strategies/: BolTrend.py  MRAT.py  MovingAvgCross.py  YourStrategy.py
tests/: test_transformer_training.py
trading_enhance_software/: main.py
trading_enhance_software/data_folder/: bybit_1INCH-USDT_data_History_Price_Action.json  bybit_BTC-USDT_data_History_Price_Action.json
trading_enhance_software/data_mining/: data_mining.py  format_dataset_for_rl.py  from_exc_to_raw_data_structure.py  rl_data_scraper.py  scraper_binance.py
trading_enhance_software/rl_training/: config.py  config_bis.py  (+2 more)
(+67 files in other folders)
